---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-06-29
  Changes:
    - Mod's first release
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025-06-10
  Changes:
    - First initialisation of the mod
    - Add Provider, and Requester